css/shortcode-editor.css
/* ... */
#fv-player-shortcode-editor h1 {
  color: #23282d;
}

#fv-player-shortcode-editor .nav-tab {
	float: left;
	border: 1px solid #ccc;
	border-bottom: none;
	padding: 5px 10px;
	font-size: 14px;
	line-height: 1.71428571;
	font-weight: 600;
	background: #e5e5e5;
	color: #555;
	text-decoration: none;
	white-space: nowrap;
}
#fv-player-shortcode-editor .nav-tab-active {
	background: #fff;
	border-bottom: 1px solid #fff;
}
#fv-player-shortcode-editor .nav-tab-wrapper {
	border-bottom: 1px solid #ccc;
	margin: 0;
	padding: 0;
	line-height: inherit;
}
#fv-player-shortcode-editor .nav-tab-wrapper:not(.wp-clearfix):after {
	content: "";
	display: table;
	clear: both;
}

#fv-player-shortcode-editor-right label {
  color: black;
  font-size: 13px;
}

#fv-player-shortcode-editor input[type="text"],
#fv-player-shortcode-editor input[type="number"],
#fv-player-shortcode-editor select,
#fv-player-shortcode-editor textarea {
	box-shadow: 0 0 0 transparent;
	border: 1px solid #918f8f;
    background-color: #fff;
    color: #32373c;
    border-radius: 2px;
}
#fv-player-shortcode-editor textarea{
	width:100%;
}
#fv-player-shortcode-editor input[type="text"],
#fv-player-shortcode-editor input[type="number"],
#fv-player-shortcode-editor select,
.fv_player_editor_url_shortened {
  font-size: 14px;
	padding: 0 8px;
	line-height: 2;
  min-height: 36px;
	width:100%;
  word-break: break-all;
}
#fv-player-shortcode-editor input::placeholder, #fv-player-shortcode-editor textarea::placeholder {
  color: unset;
}
.fv_player_editor_url_shortened {
  margin: 4px 2px;
}
.fv_player_editor_url_shortened .dashicons {
  cursor: pointer;
}
.fv_player_editor_url_shortened .link-preview span.path,
.fv_player_editor_url_shortened .link-preview span.sep {
  color: #aaa;
}

#fv-player-shortcode-editor .fv-player-playlist-item-title, #fv-player-shortcode-editor .fv-player-playlist-item-title:hover{ margin:0;border:0;background:transparent; }


/* Elementor fixes */
body.elementor-editor-active #fv-player-shortcode-editor .button, body.elementor-editor-active #fv-player-shortcode-editor .button-primary {
  display: inline-block;
  text-decoration: none;
  font-size: 13px;
  line-height: 2.15384615;
  min-height: 30px;
  margin: 0;
  padding: 0 10px;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  -webkit-appearance: none;
  border-radius: 3px;
  white-space: nowrap;
  box-sizing: border-box;
  color: #2271b1;
  border-color: #2271b1;
  background: #f6f7f7;
}
body.elementor-editor-active #fv-player-shortcode-editor .button-primary {
  background: #2271b1;
  border-color: #2271b1;
  color: #fff;
  text-decoration: none;
  text-shadow: none;
}
body.elementor-editor-active #fv-player-shortcode-editor .button:hover {
  background: #f0f0f1;
  border-color: #0a4b78;
  color: #0a4b78;
}
body.elementor-editor-active #fv-player-shortcode-editor .button-primary:hover {
  background: #135e96;
  border-color: #135e96;
  color: #fff;
}


/*
New FV Player Editor modal box styling
*/
#fv-player-editor-modal {
  position: fixed;
  top: 30px;
  left: 30px;
  right: 30px;
  bottom: 30px;
  z-index: 160000;
}
#fv-player-editor-backdrop {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  min-height: 360px;
  background: #000;
  opacity: 0.7;
  z-index: 159900;
}
body.is-fv-player-editor-modal-open {
  overflow: hidden;
}
#fv-player-shortcode-editor {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
#fv-player-editor-modal-top {
  top: 0;
  left: 200px;
  right: 0;
  height: 60px;
  z-index: 200;
  border-bottom: 1px solid #e9e9e9;
  display: flex;
  align-items: center;
  justify-content:space-between;
}
#fv-player-editor-modal-top h1 {
  padding: 0 16px;
  font-size: 22px;
  line-height: 2.27272727;
  margin: 0;
  font-weight:600;
}
#fv-player-editor-modal-top #fv-player-editor-modal-close {
    margin-right: 20px;
    border: 0;
    background-color: transparent;
    display: block;
    color: #444;
    height: 38px;
    width: 40px;
    cursor: pointer;
    text-align: center;
    background-size: 34px;
    background-repeat: no-repeat;
    font-size: 0;
    border-radius: 100%;
    background-position: center;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 0 24 24' width='24px' fill='%23000000'%3E%3Cpath d='M0 0h24v24H0V0z' fill='none'/%3E%3Cpath d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z'/%3E%3C/svg%3E");

}
#fv-player-editor-modal-top #fv-player-editor-modal-close:hover {
    background-color: #efefef;
}

#fv-player-shortcode-editor-preview-new-tab, #fv-player-shortcode-editor-preview-no {
  background-size: contain;
  background-position: center;
  image-rendering: -webkit-optimize-contrast;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
}
#fv-player-shortcode-editor-preview-new-tab, #fv-player-shortcode-editor-preview-no.upload-support {
  border: 4px dashed #ddd;
}
#fv-player-shortcode-editor-preview-no .components-base-control__field {
  justify-content: center;
}
#fv-player-shortcode-editor-preview-no input[name=hero-src] {
  width: 25%;
}
#fv-player-shortcode-editor-preview-no .fv-player-editor-notice {
  max-width: 100%;
  position: static;
}

#fv-player-shortcode-editor-left {
  float: left;
  width: 67%;
  margin-right: 0;
  height: 100%;
  position:relative;
  border-right: 1px solid #e9e9e9;
  display: flex;
  justify-content: center;
  box-sizing: border-box;
}
#fv-player-shortcode-editor-right {
  float: left;
  width: 33%;
  position: relative;
  height: calc(100% - 60px);
}
#fv-player-shortcode-editor-preview {
   width:75%;

}

#fv-player-shortcode-editor.is-intro #fv-player-shortcode-editor-left,
#fv-player-shortcode-editor.is-intro #fv-player-shortcode-editor-preview {
  width: 100%;
}
#fv-player-shortcode-editor.is-intro #fv-player-shortcode-editor-right {
  display: none;
}
/* ... */

